--- a/DependencyInjectionPrototype.Mvc/Views/Home/Index.cshtml
+++ b/DependencyInjectionPrototype.Mvc/Views/Home/Index.cshtml
@@ -6,4 +6,5 @@
     <p>1.) @ViewBag.Output1</p>
     <p>2.) @ViewBag.Output2</p>
     <p>3.) @ViewBag.Output3</p>
+    <p>4.) @ViewBag.DayOfWeek</p>
 </div>
